--- a/views/registrationPage.ejs
+++ b/views/registrationPage.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - The Social Network</title>
+    <title>Register - The Social Network</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         /* Custom styling */
@@ -99,7 +99,7 @@
         <div class="right-side">
             <h2 class="text-center mb-4">Create an account</h2>
 
-            <form>
+            <form method="post" action='/register'>
                 <div class="mb-3">
                     <label for="username" class="form-label">Username</label>
                     <input type="text" class="form-control" id="username" name="username" placeholder="Enter your username" required>
@@ -111,10 +111,10 @@
                 </div>
 
                 <!-- Login Button -->
-                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="submit" class="btn btn-primary">Register</button>
             </form>
 
-            <p class="text-muted">Don't have an account? <a href="">Sign up</a></p>
+            <p class="text-muted">Already have an account? <a href="/login">Log in</a></p>
         </div>
     </div>
 
