feat(views/partials): add hyperlinks to navbar

--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -3,16 +3,16 @@
     <div class="navbar-collapse justify-content-center" id="navbarNavDropdown">
         <ul class="navbar-nav d-flex w-100 justify-content-evenly">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">My Feed</a>
+                <a class="nav-link" href="/post">My Feed</a>  <!-- here 'post' means blogs page (main blog feed page) -->
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Register</a>
+                <a class="nav-link" href="/register">Register</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
+                <a class="nav-link" href="/login">Login</a>
             </li>
         </ul>
     </div>
