--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -9,6 +9,9 @@
                 <a class="nav-link" href="/post">My Feed</a>  <!-- here 'post' means blogs page (main blog feed page) -->
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="/post/newblog">Create new blog</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="/register">Register</a>
             </li>
             <li class="nav-item">
