feat(views/partials): add logout hyperlink to navbar (non functional)

--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -2,7 +2,7 @@
     <!-- <a class="navbar-brand" href="#">The Social Network (Logo)</a>  -->
     <div class="navbar-collapse justify-content-center" id="navbarNavDropdown">
         <ul class="navbar-nav d-flex w-100 justify-content-evenly">
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
@@ -16,6 +16,9 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/login">Login</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/logout">Logout</a>
             </li>
         </ul>
     </div>
