--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -9,7 +9,7 @@
                 <a class="nav-link" href="/post">My Feed</a>  <!-- here 'post' means blogs page (main blog feed page) -->
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/post/newblog">Create new blog</a>
+                <a class="nav-link" href="/post/newblog">Create New Blog</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/logout">Logout</a>
