--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -18,6 +18,8 @@
             display: flex;
             height: 100vh;
             align-items: center;
+            position: relative;
+            z-index: 1;
         }
 
         /* Left side: "The Social Network" branding */
@@ -71,6 +73,10 @@
         .text-muted {
             text-align: center;
             margin-top: 20px;
+        }
+        .alert{
+            position: absolute;
+            z-index: 2;
         }
 
         /* Responsive Design */
