--- a/views/postsTemplate.ejs
+++ b/views/postsTemplate.ejs
@@ -15,7 +15,7 @@
         <div class="alert alert-success fade show d-flex align-items-center justify-content-center gap-3" style="position: absolute;z-index: 2;"  role="alert">
             <%= data.message %>
             <button type="button" class="btn-close" data-bs-dismiss="alert" ></button>
-          </div>
+        </div>
 
     <%}%>
 
@@ -39,6 +39,17 @@
                             <div class="content">
                                 <p><%= blog.content %></p>
                             </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container mb-5">
+                    <div class="row">
+                        <div class="col-md-8 offset-md-2 ">
+                            <button class="btn btn-outline-primary btn-sm"><i class="bi bi-heart"><span style="font-style: normal; font-size: large;"> 0</span></i></button>
+                            <button class="btn btn-outline-primary btn-sm"><i class="bi bi-chat-left-dots"><span style="font-style: normal; font-size: large;"> 0</span></i></button>
+                            <button class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i></button>
+                            <button class="btn btn-outline-primary"><i class="bi bi-trash3"></i></button>
+                            <button class="btn btn-outline-primary"><i class="bi bi-three-dots"></i></button>
                         </div>
                     </div>
                 </div>
