--- a/views/postsTemplate.ejs
+++ b/views/postsTemplate.ejs
@@ -48,7 +48,7 @@
                             <button class="btn btn-outline-primary btn-sm"><i class="bi bi-heart"><span style="font-style: normal; font-size: large;"> 0</span></i></button>
                             <button class="btn btn-outline-primary btn-sm"><i class="bi bi-chat-left-dots"><span style="font-style: normal; font-size: large;"> 0</span></i></button>
                             <button class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i></button>
-                            <button class="btn btn-outline-primary"><i class="bi bi-trash3"></i></button>
+                            <button class="btn btn-outline-primary" onclick="submitDeleteForm('<%=blog._id%>')"><i class="bi bi-trash3"></i></button>
                             <button class="btn btn-outline-primary"><i class="bi bi-three-dots"></i></button>
                         </div>
                     </div>
@@ -67,6 +67,21 @@
     
     <%- include('partials/_footer') %>
 
+    <!-- Delete Blog Form -->
+    <form action="" method="POST" id="blogDeleteForm"></form>  <!-- action URL will be set in the submitDeleteForm() method -->
+    
+    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        // method to submit the blog delete form
+        function submitDeleteForm(blogId){
+            console.log("ID of the blog passed to submitDeleteFrom() method: ", blogId)
+            const blogDeleteForm = document.getElementById('blogDeleteForm')
+            blogDeleteForm.action = `/post/${blogId}?_method=DELETE` 
+            blogDeleteForm.submit()
+        }
+    </script>
+
 </body>
 </html>
