feat(controller): render blog post edit page

--- a/views/editBlogPage.ejs
+++ b/views/editBlogPage.ejs
@@ -4,13 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit Blog</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <style>
+        body {
+          background-color: #0d6efd; /* Light background */
+        }
+        .form-container {
+          margin-top: 50px;
+        }
+        .form-container .card {
+          background-color: #ffffff;
+          border-radius: 25px;
+          box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        h2{
+          color: #0d6efd;
+        }
+        button{
+          font-style: italic;
+          height: 3rem;
+        }
+        hr{
+            color: #ffffff;
+            margin-top: 0px;
+        }
+    </style>
 </head>
 
 <body>
     
-    <%- include('/partials/_header')%>
+    <%- include('partials/_header')%>
 
-    <%- include('/partials/_navbar')%>
+    <%- include('partials/_navbar')%>
 
     <hr>
 
@@ -38,7 +63,8 @@
         </div>
       </div>
 
-    <%- include('/partials/_footer')%>
+    <%- include('partials/_footer')%>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 
 </body>
 </html>
