--- a/views/postsTemplate.ejs
+++ b/views/postsTemplate.ejs
@@ -47,7 +47,7 @@
                         <div class="col-md-8 offset-md-2 ">
                             <button class="btn btn-outline-primary btn-sm"><i class="bi bi-heart"><span style="font-style: normal; font-size: large;"> 0</span></i></button>
                             <button class="btn btn-outline-primary btn-sm"><i class="bi bi-chat-left-dots"><span style="font-style: normal; font-size: large;"> 0</span></i></button>
-                            <button class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i></button>
+                            <a href="/post/editBlog/<%=blog._id%>"><button class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i></a></button></a>
                             <button class="btn btn-outline-primary" onclick="submitDeleteForm('<%=blog._id%>')"><i class="bi bi-trash3"></i></button>
                             <button class="btn btn-outline-primary"><i class="bi bi-three-dots"></i></button>
                         </div>
