fix(view): change button type to reset

--- a/views/createBlogPage.ejs
+++ b/views/createBlogPage.ejs
@@ -53,7 +53,7 @@
             </div>
             <div class="d-grid gap-2">
               <button type="submit" class="btn btn-primary ">Upload</button>
-              <button type="clear" class="btn btn-secondary">Clear</button>
+              <button type="reset" class="btn btn-secondary">Clear</button>
             </div>
           </form>
         </div>
