--- a/views/editBlogPage.ejs
+++ b/views/editBlogPage.ejs
@@ -44,7 +44,8 @@
           <div class="col-md-8 col-lg-6">
             <div class="card p-4">
               <h2 class="text-center mb-5 fw-bold fst-italic">Edit Your Blog </h2>
-              <form action="/post" method="post">
+              <!-- BLOG UPDATE FORM -->
+              <form action="/post" method="post" id="blogUpdateForm">
                 <div class="mb-4">
                   <p class="fw-semibold">Title</p>
                   <input type="text" class="form-control" id="blogName" name="title" value="<%=previousBlog.title%>">
@@ -55,7 +56,7 @@
                 </div>
                 <div class="d-grid gap-2">
                   <button type="submit" class="btn btn-primary ">Save Changes</button>
-                  <button type="clear" class="btn btn-secondary">Clear</button>
+                  <button type="reset" class="btn btn-secondary">Clear</button>
                 </div>
               </form>
             </div>
