fix(view): remove navbar link referring to homepage

--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -3,13 +3,10 @@
     <div class="navbar-collapse justify-content-center" id="navbarNavDropdown">
         <ul class="navbar-nav d-flex w-100 justify-content-evenly">
             <li class="nav-item">
-                <a class="nav-link" href="/">Home</a>
+                <a class="nav-link" href="/post">Home</a>  <!-- here 'post' means blogs page (main blog feed page) -->
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/post">My Feed</a>  <!-- here 'post' means blogs page (main blog feed page) -->
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/post/newblog">Create New Blog</a>
+                <a class="nav-link" href="/post/newblog">New Blog</a>
             </li>
             <li class="nav-item">
                 <form action="/logout" method="post" id="logout-form">
