refactor: replace alerts with Bootstrap Toasts component

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,5 +1,5 @@
 <header class="bg-light py-5">
-    <div class="container" style="position: relative; z-index: 1;">
+    <div class="container">
         <div class="row">
             <div class="col-12 text-center">
                 <h3 class="fw-bold text-primary" style="font-size: 3em;">
