--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -99,9 +99,12 @@
 <body>
 
     <%if(message.length > 0){%>
-        <div class="alert alert-success fade show d-flex align-items-center justify-content-center gap-3" role="alert" style="position: absolute; z-index: 2;">
-            <%= message %>
-            <button type="button" class="btn-close" data-bs-dismiss="alert" ></button>
+        <div class="toast-container position-fixed bottom-0 end-0 p-3">
+            <div id="liveToast" class="toast" role="alert" >
+              <div class="toast-body bg-success bg-gradient text-white">
+                <%=message%>
+              </div>
+            </div>
         </div>
     <%}%>
 
@@ -125,6 +128,28 @@
     <!-- Bootstrap JS cdn -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+    <script>
+        // initializing BS Toast Component
+        document.addEventListener('DOMContentLoaded', function() {
+        var toastElement = document.getElementById('liveToast');
+        if (toastElement) {
+          var toast = new bootstrap.Toast(toastElement); // Calling BS toast function
+          toast.show(); 
+        
+          // Hide toast after 3 seconds 
+          setTimeout(function() {
+            toast.hide();
+          }, 3000);
+         }
+        });
 
+        // method to submit the blog delete form
+        function submitDeleteForm(blogId){
+            console.log("ID of the blog passed to submitDeleteFrom() method: ", blogId)
+            const blogDeleteForm = document.getElementById('blogDeleteForm')
+            blogDeleteForm.action = `/post/${blogId}?_method=DELETE` 
+            blogDeleteForm.submit()
+        }
+    </script>
 </body>
 </html>
