--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -18,8 +18,6 @@
             display: flex;
             height: 100vh;
             align-items: center;
-            position: relative;
-            z-index: 1;
         }
 
         /* Left side: "The Social Network" branding */
@@ -95,10 +93,15 @@
 <body>
 
     <%if(message.length > 0){%>
-        <div class="alert alert-success fade show d-flex align-items-center justify-content-center gap-3" role="alert">
-            <%= message %>
-            <button type="button" class="btn-close" data-bs-dismiss="alert" ></button>
+
+        <div class="toast-container position-fixed bottom-0 end-0 p-3">
+            <div id="liveToast" class="toast" role="alert" >
+              <div class="toast-body bg-success bg-gradient text-white">
+                <%= message %>
+              </div>
+            </div>
         </div>
+
     <%}%>
 
 
@@ -133,10 +136,26 @@
         </div>
     </div>
 
-    <!-- Bootstrap JS cdn -->
+
+    <!-- SCRIPTS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+    <script>
+    // initializing BS Toast component
+    document.addEventListener('DOMContentLoaded', function() {
+    var toastElement = document.getElementById('liveToast');
+    if (toastElement) {
+      var toast = new bootstrap.Toast(toastElement); // Calling BS toast function
+      toast.show(); 
 
+      // Hide toast after 3 seconds 
+      setTimeout(function() {
+        toast.hide();
+      }, 3000);
+     }
+    });
+    </script>
+    
 </body>
 
 </html>
