--- a/views/postsTemplate.ejs
+++ b/views/postsTemplate.ejs
@@ -3,6 +3,7 @@
 <%- include('partials/_head') %>
 <body>
 
+
     <!-- Helper function to convert date from YYYY-MM-DD to DD-MM-YYYY -->
     <% function dateConversion(dateInYMD){
         const parts = dateInYMD.split('-')
@@ -10,11 +11,15 @@
         return dateInDMY;
     }%>
 
+
     <%if(data.message.length > 0) {%>
 
-        <div class="alert alert-success fade show d-flex align-items-center justify-content-center gap-3" style="position: absolute;z-index: 2;"  role="alert">
-            <%= data.message %>
-            <button type="button" class="btn-close" data-bs-dismiss="alert" ></button>
+        <div class="toast-container position-fixed bottom-0 end-0 p-3">
+          <div id="liveToast" class="toast" role="alert" >
+            <div class="toast-body bg-success bg-gradient text-white">
+              <%=data.message%>
+            </div>
+          </div>
         </div>
 
     <%}%>
@@ -70,22 +75,39 @@
 
     <%}%>
     
+
     <%- include('partials/_footer') %>
+
 
     <!-- Delete Blog Form -->
     <form action="" method="POST" id="blogDeleteForm"></form>  <!-- action URL will be set in the submitDeleteForm() method -->
     
-    
 
+    <!-- SCRIPTS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        // method to submit the blog delete form
-        function submitDeleteForm(blogId){
-            console.log("ID of the blog passed to submitDeleteFrom() method: ", blogId)
-            const blogDeleteForm = document.getElementById('blogDeleteForm')
-            blogDeleteForm.action = `/post/${blogId}?_method=DELETE` 
-            blogDeleteForm.submit()
-        }
+    // initializing BS Toast component
+    document.addEventListener('DOMContentLoaded', function() {
+    var toastElement = document.getElementById('liveToast');
+    if (toastElement) {
+      var toast = new bootstrap.Toast(toastElement); // Calling BS toast function
+      toast.show(); 
+
+      // Hide toast after 3 seconds 
+      setTimeout(function() {
+        toast.hide();
+      }, 3000);
+     }
+    });
+
+
+    // method to submit the blog delete form
+    function submitDeleteForm(blogId){
+        console.log("ID of the blog passed to submitDeleteFrom() method: ", blogId)
+        const blogDeleteForm = document.getElementById('blogDeleteForm')
+        blogDeleteForm.action = `/post/${blogId}?_method=DELETE` 
+        blogDeleteForm.submit()
+    }
     </script>
 
 </body>
