--- a/views/blogsListPage_admin.ejs
+++ b/views/blogsListPage_admin.ejs
@@ -8,10 +8,34 @@
 </head>
 <body>
 
+    <%
+        function dateConversion(dateInYMD){
+            const parts = dateInYMD.split('-')
+            const dateInDMY = `${parts[2]}-${parts[1]}-${parts[0]}`
+            return dateInDMY;
+        }
+    %>
+
     <%- include('partials/_header_admin') %>
 
     <%- include('partials/_navbar_admin')%>
 
+    <%if(blogs.length >0){%>
+        <%blogs.forEach(function(blog){%>
+            <div class="container my-5">
+                <div class="row">
+                    <div class="col-md-8 offset-md-2">
+                        <h4 class="display-4 text-center mb-4"><%= blog.title %></h4>
+                        <p class="text-muted text-center mb-4">Posted by <span class="fst-italic fw-bold"><%= blog.author.username %></span> on <%= dateConversion(blog.createdAt.toISOString().substring(0,10)) %></p>
+                        <div class="content">
+                            <p><%= blog.content %></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr>
+        <%})%>
+    <%}%>
 
 
     
