fix(view): typo in blog creation page

--- a/views/createBlogPage.ejs
+++ b/views/createBlogPage.ejs
@@ -53,7 +53,7 @@
             </div>
             <div class="mb-5">
               <p class="mb-2 text-muted">Upload thumbnail for your blog (image format only)</p>
-              <input type="file"  class="form-control" id="imageUpload" name="blogThumbail" required>
+              <input type="file"  class="form-control" id="imageUpload" name="blogThumbnail" required>
             </div>
             <div class="d-grid gap-2">
               <button type="submit" class="btn btn-primary ">Upload</button>
