fix(views): replace image alt with blog title

--- a/views/postsTemplate.ejs
+++ b/views/postsTemplate.ejs
@@ -84,7 +84,7 @@
                 
                         <!-- Image column -->
                         <div class="col-lg-6 blog-image-col mt-5">
-                            <img src="/uploads/<%=blog.thumbnail%>" alt="Mastering The Art Of Public Speaking" class="img-fluid blog-image">
+                            <img src="/uploads/<%=blog.thumbnail%>" alt="<%= blog.title %>" class="img-fluid blog-image">
                         </div>
                 
                         <!-- Text content column -->
