--- a/views/editBlogPage.ejs
+++ b/views/editBlogPage.ejs
@@ -56,7 +56,7 @@
                 </div>
                 <div class="mb-5">
                   <p class="mb-2 text-muted">Change blog thumbnail</p>
-                  <input type="file"  class="form-control" id="imageUpload" name="blogThumbail" required>
+                  <input type="file"  class="form-control" id="imageUpload" name="updatedBlogThumbail" required>
                 </div>
                 <div class="d-grid gap-2">
                   <button type="submit" class="btn btn-primary ">Save Changes</button>
