--- a/views/blogsListPage_admin.ejs
+++ b/views/blogsListPage_admin.ejs
@@ -79,8 +79,8 @@
                     <!-- Blog Info -->
                     <div class="col-md-8 p-0">
                       <div class="card-body">
-                        <h5 class="disaplay-5 fw-bold lh-2"><%= blog.title %></h5>
-                        <p class="card-text content-preview">
+                        <h5 class="display-6 fs-3 fw-bold lh-2"><%= blog.title %></h5>
+                        <p class="card-text content-preview lead">
                           <%= blog.content %>
                         </p>
                         <small class="text-muted">Posted by <span class="fst-italic fw-semibold mx-1"> <%= blog.author.username %> </span> on <%= dateConversion(blog.createdAt.toISOString().substring(0,10)) %> </small>
