feat(views): add image src urls to public assets (admin page cards)

--- a/views/blogsListPage_admin.ejs
+++ b/views/blogsListPage_admin.ejs
@@ -78,7 +78,7 @@
           <div class="col-12 col-md-6 col-lg-4 ">
             <div class="card h-100">
               <div class="card-img-container">
-                <img src="" 
+                <img src="/images/card-image-placard.png" 
                      class="card-img-top" alt="Total Blogs Published">
               </div>
               <div class="card-body">
@@ -92,7 +92,7 @@
           <div class="col-12 col-md-6 col-lg-4">
             <div class="card h-100">
               <div class="card-img-container">
-                <img src="" 
+                <img src="/images/card-image-crowd-red-bg.png" 
                      class="card-img-top" alt="Total Users Registered">
               </div>
               <div class="card-body">
