--- a/views/blogsListPage_admin.ejs
+++ b/views/blogsListPage_admin.ejs
@@ -40,11 +40,11 @@
           margin-left: auto;
         }
         .card-img-container{
-            height: 200px;         /* for fixed height*/
+            height: 300px;         /* for fixed height*/
             overflow: hidden;      /* to keep the cards parts from overflowed above other */
         }
         .card-img-container img {
-             width: 100%;
+            width: 100%;
             height: 100%;
             object-fit: cover;     /* to keep image in a fixed ratio - irrespective of the image dimention */
         }
@@ -97,7 +97,7 @@
               </div>
               <div class="card-body">
                 <h5 class="card-title">Happy Bloggers</h5>
-                <p class="card-text"></p>
+                <p class="card-text">200</p>
               </div>
             </div>
           </div>
