style(views): change card typography

--- a/views/blogsListPage_admin.ejs
+++ b/views/blogsListPage_admin.ejs
@@ -83,7 +83,7 @@
               </div>
               <div class="card-body">
                 <h5 class="card-title">Ideas Published</h5>
-                <p class="card-text"></p>
+                <p class="card-text fw-bold fs-2 text-danger">350</p>
               </div>
             </div>
           </div>
@@ -97,7 +97,7 @@
               </div>
               <div class="card-body">
                 <h5 class="card-title">Happy Bloggers</h5>
-                <p class="card-text">200</p>
+                <p class="card-text fw-bold fs-2 text-danger">200</p>
               </div>
             </div>
           </div>
