style(views): add delete and update buttons in admin page

--- a/views/blogsListPage_admin.ejs
+++ b/views/blogsListPage_admin.ejs
@@ -70,11 +70,11 @@
     <%- include('partials/_navbar_admin')%>
 
     
-    <!-- Card for showing number of blogs uploaded -->
+    <!-- Cards showing stats-->
     <div class="container my-5 ">
         <div class="row g-3 d-flex justify-content-between">
       
-          <!-- Card 1 -->
+          <!-- Card showing number of blogs published -->
           <div class="col-12 col-md-6 col-lg-4 ">
             <div class="card h-100">
               <div class="card-img-container">
@@ -88,7 +88,7 @@
             </div>
           </div>
       
-          <!-- Card 2 -->
+          <!-- Card showing number of users registered -->
           <div class="col-12 col-md-6 col-lg-4">
             <div class="card h-100">
               <div class="card-img-container">
@@ -170,11 +170,17 @@
                     <div>
                       <button class="btn btn-outline-danger btn-sm">
                         <i class="bi bi-heart "></i>
-                        <span style="font-style: normal; font-size: large;"> 0</span>
+                        <span style="font-style: normal; font-size: large;"> 120</span>
                       </button>
                       <button class="btn btn-outline-danger btn-sm">
                         <i class="bi bi-chat-left-dots"></i>
                         <span style="font-style: normal; font-size: large;"> 0</span>
+                      </button>
+                      <button class="btn btn-outline-danger btn-md">
+                        <i class="bi bi-pencil-square"></i>
+                      </button>
+                      <button class="btn btn-outline-danger btn-md">
+                        <i class="bi bi-trash3"></i>
                       </button>
                     </div>
                     
