--- a/views/blogsListPage_admin.ejs
+++ b/views/blogsListPage_admin.ejs
@@ -83,7 +83,7 @@
               </div>
               <div class="card-body">
                 <h5 class="card-title">Ideas Published</h5>
-                <p class="card-text fw-bold fs-2 text-danger">350</p>
+                <p class="card-text fw-bold fs-2 text-danger"><%= blogs.blogCount%></p>
               </div>
             </div>
           </div>
