feat: add total users count to admin stats card

--- a/views/blogsListPage_admin.ejs
+++ b/views/blogsListPage_admin.ejs
@@ -97,7 +97,7 @@
               </div>
               <div class="card-body">
                 <h5 class="card-title">Happy Bloggers</h5>
-                <p class="card-text fw-bold fs-2 text-danger">200</p>
+                <p class="card-text fw-bold fs-2 text-danger"><%= blogs.userCount%></p>
               </div>
             </div>
           </div>
