--- a/views/blogsListPage_admin.ejs
+++ b/views/blogsListPage_admin.ejs
@@ -176,8 +176,10 @@
                         <i class="bi bi-chat-left-dots"></i>
                         <span style="font-style: normal; font-size: large;"> 0</span>
                       </button>
-                      <button class="btn btn-outline-danger btn-md">
-                        <i class="bi bi-pencil-square"></i>
+                      <a href="/admin/editBlog/<%=blog._id%>">
+                        <button class="btn btn-outline-danger btn-md">
+                        <i class="bi bi-pencil-square text-danger"></i>
+                      </a>
                       </button>
                       <button class="btn btn-outline-danger btn-md" onclick="submitDeleteForm('<%=blog._id%>')">
                         <i class="bi bi-trash3"></i>
