feat: add custom blog edit page for admin

--- a/views/editBlogPage_admin.ejs
+++ b/views/editBlogPage_admin.ejs
@@ -18,7 +18,10 @@
           box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
         h2{
-          color: #0d6efd;
+          color: #dc3545;
+        }
+        input:hover, textarea:hover{
+          border-color: #dc3545;
         }
         button{
           font-style: italic;
@@ -68,7 +71,6 @@
         </div>
       </div>
 
-    <%- include('partials/_footer')%>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 
 </body>
