--- a/views/usersListPage_admin.ejs
+++ b/views/usersListPage_admin.ejs
@@ -3,19 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin - User Info</title>
+    <title>Admin - Users Info</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <style>
+        /* To hide table layout and show card layout - for small screens*/
+        @media (max-width: 768px) {
+         .user-table { display: none; }
+        }
+        /* To hide card layout and show table layout for medium and large screens*/
+        @media (min-width: 769px) {
+         .user-cards { display: none; }
+        }
+    </style>
 </head>
-<body>
 
+<body class="bg-light">
+
+    <!-- Header - imported from /partials -->
     <%- include('partials/_header_admin') %>
 
+
+    <!-- Navbar - imported from /partials -->
     <%- include('partials/_navbar_admin')%>
 
 
+    <!-- User Information Template -->
+    <div class="container my-5">
+  
+      <!-- TABLE VIEW - For Medium & Large Screens -->
+      <div class="user-table">
+        <table class="table table-column-striped table-hover align-middle">
+          <thead class="table-secondary table-danger">
+            <tr>
+              <th colspan="2" scope="col" style="text-align: center;">User</th>
+              <th>Role</th>
+              <th>Status</th>
+              <th>Signup Date</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody class="table-group-divider">
+            <tr>
+              <td><img src="https://i.pravatar.cc/40?" class="rounded-circle img-fluid"></td>
+              <td>(User name)</td>
+              <td>(User role)</td>
+              <td><span class="badge bg-success">Active</span></td>
+              <td>(User join date in DD-MM-YYYY)</td>
+              <td>
+                <button class="btn btn-sm btn-primary">Restrict</button>
+                <button class="btn btn-sm btn-danger">Delete</button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+  
+      <!-- CARD VIEW - For Small Screens -->
+      <div class="user-cards">
+        <div class="card mb-3">
+          <div class="card-body">
+            <div class="d-flex align-items-center">
+              <img src="https://i.pravatar.cc/40?" class="rounded-circle me-4">
+              <div>
+                <h6 class="mb-0">(User Name)</h6>
+              </div>
+            </div>
+            <div class="mt-3">
+              <span class="badge bg-success">Active</span>
+              <span class="badge bg-secondary">User</span>
+              <small class="d-block mt-1">(User join date in DD-MM-YYYY)</small>
+              <div class="mt-2">
+                <button class="btn btn-sm btn-primary">Restrict</button>
+                <button class="btn btn-sm btn-danger">Delete</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  
+    </div>
+  
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
+  
 </html>
